# machinic-assemblage

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.toml  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  environmental.md  limits.md  open_questions.md
examples/: 01_honest_collective.py  02_ambiguous_consultation.py  03_capture_pattern.py
src/machinic_assemblage/: __init__.py  assemblage.py  capture_detector.py  ecologies.py  enunciation.py  groupe_sujet.py  protocol.py  transversality.py  types.py
src/machinic_assemblage/adapters/: __init__.py  langgraph_adapter.py  obsidian_adapter.py
tests/: conftest.py  test_assemblage.py  test_capture_detector.py  test_ecologies.py  test_enunciation.py  test_groupe_sujet.py  test_intervention_points.py  test_no_research_mode.py  test_protocol.py  test_transversality.py  test_types.py
tests/ci/: test_groupe_sujet_self_check.py  test_readme_political_statement.py
tools/: close_session.sh  lint_composite_score.py
